# warvault

./: .gitignore  README.md  config.yaml.example  pyproject.toml  run.bat  test.bat  test.sh  update.bat  update.sh
docs/: design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
frontend/src/node-stubs/: fs.js  os.js
src/: __main__.py
src/app_main/: __main__.py  app.py  auto_refresh.py  config.py  logging_setup.py  runtime.py
src/app_main/api/: __init__.py  assets.py  sources.py  status.py
src/app_main/core/: assets.py  db.py  metadata.py  paths.py  sources.py
tests/: test_config_sources.py  test_logging_config.py  test_model_formats.py  test_scanner.py  test_smoke.py
