[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "warvault"
version = "0.0.0"
description = "Warvault 本地命令行工具"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
